--- a/build.gradle
+++ b/build.gradle
@@ -40,25 +40,17 @@ publishing {
 	repositories {
 		maven {
 			name = "GitHubPackages"
-			url = uri("https://maven.pkg.github.com/fluidnotions")
+			url = uri("https://maven.pkg.github.com/fluidnotions/spring-boot-controller-global-exception-handler")
 			credentials {
 				username = properties.getProperty('github.username')
 				password = properties.getProperty('github.token')
 			}
 		}
 	}
-//	publications {
-//		gpr(MavenPublication) {
-//			from(components.java)
-//			artifactId = rootProject.name
-//			version = '0.0.1-SNAPSHOT'
-//		}
-//	}
-
-
 	publications {
-		mavenJava(MavenPublication) {}
+		mavenJava(MavenPublication){
+			artifact jar
+			artifactId = 'spring-web-controller-exception-handler'
+		}
 	}
-
-
 }
